--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 abc.csv filter=lfs diff=lfs merge=lfs -text
 creditcard.csv filter=lfs diff=lfs merge=lfs -text
+def.csv filter=lfs diff=lfs merge=lfs -text
