--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 abc.csv filter=lfs diff=lfs merge=lfs -text
 creditcard.csv filter=lfs diff=lfs merge=lfs -text
 def.csv filter=lfs diff=lfs merge=lfs -text
+household_power_consumption.txt filter=lfs diff=lfs merge=lfs -text
